tests/functional/lang/eval-fail-list.err.exp
error:
       … in the left operand of the list concatenation operator
         at /pwd/lang/eval-fail-list.nix:1:2:
            1| 8++1
             |  ^
            2|

       error: expected a list but found an integer: 8
